--- a/react-animeflv/package.json
+++ b/react-animeflv/package.json
@@ -17,5 +17,8 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "react-rating": "^0.9.1"
+  }
 }
